fix(header): fix home button on small sizes

--- a/src/components/index/bookInfo/bookInfo.module.scss
+++ b/src/components/index/bookInfo/bookInfo.module.scss
@@ -82,10 +82,6 @@
 
 .author-header {
 	@include m.header-normal;
-
-	a {
-		@include m.fancy-hover-link($bottom: 1px);
-	}
 }
 
 .author-link {
